--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -1,5 +1,4 @@
 #ÆÏÌÑÑÀÎÄ
-
 ## COMMON
 common.edit=&#69;&#100;&#105;&#116;&#111;&#114;
 common.add=&#78;&#111;&#118;&#97;
@@ -18,20 +17,27 @@ common.confirm=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;
 common.cancel=&#67;&#97;&#110;&#99;&#101;&#108;&#97;&#114;
 common.submit=&#65;&#112;&#114;&#101;&#115;&#101;&#110;&#116;&#97;&#231;&#227;&#111;
 common.reset=&#69;&#115;&#118;&#97;&#122;&#105;&#97;&#114;
-
+common.search=&#80;&#101;&#115;&#113;&#117;&#105;&#115;&#97;
+common.status=&#69;&#115;&#116;&#97;&#100;&#111;
+common.createTime=&#72;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#99;&#114;&#105;&#97;&#231;&#227;&#111;
+common.updateTime=&#72;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#97;&#99;&#116;&#117;&#97;&#108;&#105;&#122;&#97;&#231;&#227;&#111;
+common.option=&#70;&#117;&#110;&#99;&#105;&#111;&#110;&#97;&#109;&#101;&#110;&#116;&#111;
+common.un=&#68;&#101;&#115;&#99;&#111;&#110;&#104;&#101;&#99;&#105;&#100;&#111;
 ## Menus
 menu.system=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#111;&#32;&#115;&#105;&#115;&#116;&#101;&#109;&#97;
 menu.user=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#111;&#115;&#32;&#117;&#116;&#105;&#108;&#105;&#122;&#97;&#100;&#111;&#114;&#101;&#115;
 menu.role=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&#231;&#245;&#101;&#115;
 menu.permission=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
-menu.stock=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;
-menu.stockIn=Stock In Management
-
+menu.inventory=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;
+menu.stock=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#110;&#115
 ## Message
 message.delete=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#115;&#117;&#112;&#114;&#101;&#115;&#115;&#227;&#111;&#10;&#10;
 message.select=&#80;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#44;&#32;&#115;&#101;&#108;&#101;&#99;&#105;&#111;&#110;&#101;&#32;&#112;&#101;&#108;&#111;&#32;&#109;&#101;&#110;&#111;&#115;&#32;&#117;&#109;&#32;&#100;&#97;&#100;&#111;&#10;&#10;
 message.input=&#69;&#115;&#116;&#97;&#32;&#101;&#110;&#116;&#114;&#97;&#100;&#97;&#32;&#233;&#32;&#117;&#109;&#97;&#32;&#101;&#110;&#116;&#114;&#97;&#100;&#97;&#32;&#111;&#98;&#114;&#105;&#103;&#97;&#116;&#243;&#114;&#105;&#97;
-
+## Status
+status.normal=&#78;&#111;&#114;&#109;&#97;&#108;
+status.disable=&#100;&#101;&#115;&#97;&#99;&#116;&#105;&#118;&#97;&#114;&#10;&#10;
+status.lock=&#70;&#105;&#120;&#97;&#100;&#111;&#10;&#10;
 ## Permission
 permission.module=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;&#10;&#10;
 permission.name=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
@@ -40,4 +46,16 @@ permission.resource=&#69;&#110;&#100;&#101;&#114;&#101;&#231;&#111;&#32;&#100;&#
 permission.type=&#84;&#105;&#112;&#111;&#32;&#100;&#101;&#32;&#114;&#101;&#99;&#117;&#114;&#115;&#111;
 permission.string=&#83;&#116;&#114;&#105;&#110;&#103;&#32;&#111;&#102;&#32;&#112;&#101;&#114;&#109;&#105;&#115;&#115;&#105;&#111;&#110;
 permission.desc=&#68;&#101;&#115;&#99;&#114;&#105;&#231;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
-permission.option=&#70;&#117;&#110;&#99;&#105;&#111;&#110;&#97;&#109;&#101;&#110;&#116;&#111;&#10;&#10;
+## Role
+role.name=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#102;&#117;&#110;&#231;&#227;&#111;
+role.desc=&#68;&#101;&#115;&#99;&#114;&#105;&#231;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#102;&#117;&#110;&#231;&#245;&#101;&#115;
+role.code=&#67;&#243;&#100;&#105;&#103;&#111;&#32;&#100;&#97;&#32;&#102;&#117;&#110;&#231;&#227;&#111;
+role.permissions=&#76;&#105;&#115;&#116;&#97;&#32;&#100;&#101;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;&#115;
+## User
+user.name=&#78;&#111;&#109;&#101;&#32;&#100;&#111;&#32;&#117;&#116;&#105;&#108;&#105;&#122;&#97;&#100;&#111;&#114;
+user.email=&#69;&#110;&#100;&#101;&#114;&#101;&#231;&#111;&#32;&#100;&#101;&#32;&#99;&#111;&#114;&#114;&#101;&#105;&#111;&#32;&#101;&#108;&#101;&#99;&#116;&#114;&#243;&#110;&#105;&#99;&#111;
+user.phone=&#78;&#250;&#109;&#101;&#114;&#111;&#32;&#100;&#101;&#32;&#116;&#101;&#108;&#101;&#109;&#243;&#118;&#101;&#108;
+user.roles=&#76;&#105;&#115;&#116;&#97;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&#231;&#245;&#101;&#115;&#10;
+## Stock
+stock.name=&#78;&#111;&#109;&#101;&#32;&#100;&#111;&#32;&#101;&#110;&#116;&#114;&#101;&#112;&#111;&#115;&#116;&#111;
+stock.desc=&#68;&#101;&#115;&#99;&#114;&#105;&#231;&#227;&#111;&#32;&#100;&#111;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#109;
