【商品管理】商品类别

--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -30,6 +30,9 @@ menu.role=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#102;&#117;&
 menu.permission=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
 menu.inventory=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;
 menu.stock=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#110;&#115
+menu.product=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+menu.product.info=&#73;&#110;&#102;&#111;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#115;&#111;&#98;&#114;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+menu.product.type=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 ## Message
 message.delete=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#115;&#117;&#112;&#114;&#101;&#115;&#115;&#227;&#111;&#10;&#10;
 message.select=&#80;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#44;&#32;&#115;&#101;&#108;&#101;&#99;&#105;&#111;&#110;&#101;&#32;&#112;&#101;&#108;&#111;&#32;&#109;&#101;&#110;&#111;&#115;&#32;&#117;&#109;&#32;&#100;&#97;&#100;&#111;&#10;&#10;
@@ -59,3 +62,5 @@ user.roles=&#76;&#105;&#115;&#116;&#97;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&
 ## Stock
 stock.name=&#78;&#111;&#109;&#101;&#32;&#100;&#111;&#32;&#101;&#110;&#116;&#114;&#101;&#112;&#111;&#115;&#116;&#111;
 stock.desc=&#68;&#101;&#115;&#99;&#114;&#105;&#231;&#227;&#111;&#32;&#100;&#111;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#109;
+## Product Type
+product.type.name=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#99;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;
