--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -24,15 +24,17 @@ common.updateTime=&#72;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#97;&#99;&#116;&#
 common.option=&#70;&#117;&#110;&#99;&#105;&#111;&#110;&#97;&#109;&#101;&#110;&#116;&#111;
 common.un=&#68;&#101;&#115;&#99;&#111;&#110;&#104;&#101;&#99;&#105;&#100;&#111;
 ## Menus
-menu.system=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#111;&#32;&#115;&#105;&#115;&#116;&#101;&#109;&#97;
-menu.user=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#111;&#115;&#32;&#117;&#116;&#105;&#108;&#105;&#122;&#97;&#100;&#111;&#114;&#101;&#115;
-menu.role=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&#231;&#245;&#101;&#115;
-menu.permission=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
-menu.inventory=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;
-menu.stock=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#110;&#115
-menu.product=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
-menu.product.info=&#73;&#110;&#102;&#111;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#115;&#111;&#98;&#114;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
-menu.product.type=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+## Menus
+mu.res=&#82;&#101;&#99;&#117;&#114;&#115;&#111;&#32;&#100;&#111;&#32;&#115;&#105;&#115;&#116;&#101;&#109;&#97;
+mu.sys=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#111;&#32;&#115;&#105;&#115;&#116;&#101;&#109;&#97;
+mu.sys.user=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#111;&#115;&#32;&#117;&#116;&#105;&#108;&#105;&#122;&#97;&#100;&#111;&#114;&#101;&#115;
+mu.sys.role=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&#231;&#245;&#101;&#115;
+mu.sys.right=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
+mu.st=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;
+mu.st.info=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#110;&#115
+mu.pt=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+mu.pt.info=&#73;&#110;&#102;&#111;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#115;&#111;&#98;&#114;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+mu.pt.type=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 ## Message
 message.delete=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#115;&#117;&#112;&#114;&#101;&#115;&#115;&#227;&#111;&#10;&#10;
 message.select=&#80;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#44;&#32;&#115;&#101;&#108;&#101;&#99;&#105;&#111;&#110;&#101;&#32;&#112;&#101;&#108;&#111;&#32;&#109;&#101;&#110;&#111;&#115;&#32;&#117;&#109;&#32;&#100;&#97;&#100;&#111;&#10;&#10;
