【新增】新增商品属性管理

--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -21,8 +21,14 @@ common.search=&#80;&#101;&#115;&#113;&#117;&#105;&#115;&#97;
 common.status=&#69;&#115;&#116;&#97;&#100;&#111;
 common.createTime=&#72;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#99;&#114;&#105;&#97;&#231;&#227;&#111;
 common.updateTime=&#72;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#97;&#99;&#116;&#117;&#97;&#108;&#105;&#122;&#97;&#231;&#227;&#111;
+common.remark=&#79;&#98;&#115;&#101;&#114;&#118;&#97;&#231;&#245;&#101;&#115;
 common.option=&#70;&#117;&#110;&#99;&#105;&#111;&#110;&#97;&#109;&#101;&#110;&#116;&#111;
 common.un=&#68;&#101;&#115;&#99;&#111;&#110;&#104;&#101;&#99;&#105;&#100;&#111;
+common.accord=&#77;&#111;&#115;&#116;&#114;&#97;&#10;
+common.sales=&#86;&#101;&#110;&#100;&#97;&#115;&#10;
+common.mode.text=&#67;&#97;&#105;&#120;&#97;&#32;&#100;&#101;&#32;&#116;&#101;&#120;&#116;&#111;&#10;
+common.mode.select=&#76;&#105;&#115;&#116;&#97;&#32;&#100;&#101;&#115;&#112;&#108;&#101;&#103;&#225;&#118;&#101;&#108;&#10;
+common.mode.checkbox=&#67;&#97;&#105;&#120;&#97;&#32;&#100;&#101;&#32;&#118;&#101;&#114;&#105;&#102;&#105;&#99;&#97;&#231;&#227;&#111;&#10;
 ## Menus
 ## Menus
 mu.res=&#82;&#101;&#99;&#117;&#114;&#115;&#111;&#32;&#100;&#111;&#32;&#115;&#105;&#115;&#116;&#101;&#109;&#97;
@@ -35,6 +41,8 @@ mu.st.info=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#97;&#114;&
 mu.pt=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.info=&#73;&#110;&#102;&#111;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#115;&#111;&#98;&#114;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.type=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+mu.pt.prop=&#65;&#116;&#114;&#105;&#98;&#117;&#116;&#111;&#115;&#32;&#100;&#97;&#115;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+mu.pt.ppv=&#86;&#97;&#108;&#111;&#114;&#32;&#100;&#97;&#32;&#111;&#112;&#231;&#227;&#111;&#32;&#100;&#97;&#32;&#112;&#114;&#111;&#112;&#114;&#105;&#101;&#100;&#97;&#100;&#101;
 ## Message
 message.delete=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#115;&#117;&#112;&#114;&#101;&#115;&#115;&#227;&#111;&#10;&#10;
 message.select=&#80;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#44;&#32;&#115;&#101;&#108;&#101;&#99;&#105;&#111;&#110;&#101;&#32;&#112;&#101;&#108;&#111;&#32;&#109;&#101;&#110;&#111;&#115;&#32;&#117;&#109;&#32;&#100;&#97;&#100;&#111;&#10;&#10;
@@ -66,3 +74,11 @@ stock.name=&#78;&#111;&#109;&#101;&#32;&#100;&#111;&#32;&#101;&#110;&#116;&#114;
 stock.desc=&#68;&#101;&#115;&#99;&#114;&#105;&#231;&#227;&#111;&#32;&#100;&#111;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#109;
 ## Product Type
 product.type.name=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#99;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;
+## Product Prop
+product.prop.name=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#112;&#114;&#111;&#112;&#114;&#105;&#101;&#100;&#97;&#100;&#101;
+product.prop.type=&#79;&#115;&#32;&#116;&#105;&#112;&#111;&#115;
+product.prop.mode=&#77;&#111;&#100;&#111;&#32;&#100;&#101;&#32;&#101;&#110;&#116;&#114;&#97;&#100;&#97;
+product.prop.inputType=&#84;&#105;&#112;&#111;&#32;&#100;&#101;&#32;&#101;&#110;&#116;&#114;&#97;&#100;&#97;
+## Product Prop Value
+product.ppv.name=&#86;&#97;&#108;&#111;&#114;&#32;&#100;&#97;&#32;&#111;&#112;&#231;&#227;&#111;
+product.ppv.icon=&#237;&#99;&#111;&#110;&#101;&#115;
