【优化】优化库存管理、权限管理、商品类目管理的部分页面. 【修复】修复库存管理、权限管理、商品类目管理的页面BUG.

--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -29,6 +29,12 @@ common.sales=&#86;&#101;&#110;&#100;&#97;&#115;&#10;
 common.mode.text=&#67;&#97;&#105;&#120;&#97;&#32;&#100;&#101;&#32;&#116;&#101;&#120;&#116;&#111;&#10;
 common.mode.select=&#76;&#105;&#115;&#116;&#97;&#32;&#100;&#101;&#115;&#112;&#108;&#101;&#103;&#225;&#118;&#101;&#108;&#10;
 common.mode.checkbox=&#67;&#97;&#105;&#120;&#97;&#32;&#100;&#101;&#32;&#118;&#101;&#114;&#105;&#102;&#105;&#99;&#97;&#231;&#227;&#111;&#10;
+common.tree.append=&#65;&#100;&#105;&#99;&#105;&#111;&#110;&#97;&#114;&#32;&#110;&#243;&#100;&#117;&#108;&#111;&#115;&#32;&#112;&#97;&#114;&#97;&#32;&#99;&#114;&#105;&#97;&#110;&#231;&#97;&#115;
+common.tree.remove=&#65;&#112;&#97;&#103;&#97;&#114;&#32;&#110;&#243;&#100;&#117;&#108;&#111;&#115;&#32;&#105;&#110;&#102;&#97;&#110;&#116;&#105;&#115;
+common.tree.expand=&#65;&#98;&#114;&#101;
+common.tree.collapse=&#69;&#110;&#99;&#111;&#108;&#104;&#101;&#114;
+common.tree.reload=&#65;&#99;&#116;&#117;&#97;&#108;&#105;&#122;&#97;&#114;
+common.tree.node=&#78;&#243;&#32;&#78;&#111;&#118;&#111;
 ## Menus
 ## Menus
 mu.res=&#82;&#101;&#99;&#117;&#114;&#115;&#111;&#32;&#100;&#111;&#32;&#115;&#105;&#115;&#116;&#101;&#109;&#97;
@@ -54,11 +60,13 @@ status.lock=&#70;&#105;&#120;&#97;&#100;&#111;&#10;&#10;
 ## Permission
 permission.module=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;&#10;&#10;
 permission.name=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
+permission.parent=&#65;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;&#32;&#112;&#97;&#114;&#101;&#110;&#116;&#97;&#108;
 permission.icon=&#205;&#99;&#111;&#110;&#101;&#32;&#100;&#111;&#32;&#109;&#101;&#110;&#117;
 permission.resource=&#69;&#110;&#100;&#101;&#114;&#101;&#231;&#111;&#32;&#100;&#111;&#32;&#114;&#101;&#99;&#117;&#114;&#115;&#111;
 permission.type=&#84;&#105;&#112;&#111;&#32;&#100;&#101;&#32;&#114;&#101;&#99;&#117;&#114;&#115;&#111;
 permission.string=&#83;&#116;&#114;&#105;&#110;&#103;&#32;&#111;&#102;&#32;&#112;&#101;&#114;&#109;&#105;&#115;&#115;&#105;&#111;&#110;
 permission.desc=&#68;&#101;&#115;&#99;&#114;&#105;&#231;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
+permission.sort=&#67;&#108;&#97;&#115;&#115;&#105;&#102;&#105;&#99;&#97;&#114;
 ## Role
 role.name=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#102;&#117;&#110;&#231;&#227;&#111;
 role.desc=&#68;&#101;&#115;&#99;&#114;&#105;&#231;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#102;&#117;&#110;&#231;&#245;&#101;&#115;
@@ -71,9 +79,12 @@ user.phone=&#78;&#250;&#109;&#101;&#114;&#111;&#32;&#100;&#101;&#32;&#116;&#101;
 user.roles=&#76;&#105;&#115;&#116;&#97;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&#231;&#245;&#101;&#115;&#10;
 ## Stock
 stock.name=&#78;&#111;&#109;&#101;&#32;&#100;&#111;&#32;&#101;&#110;&#116;&#114;&#101;&#112;&#111;&#115;&#116;&#111;
+stock.parent=&#68;&#101;&#112;&#243;&#115;&#105;&#116;&#111;&#32;&#68;&#79;&#83;&#32;&#80;&#97;&#105;&#115;
 stock.desc=&#68;&#101;&#115;&#99;&#114;&#105;&#231;&#227;&#111;&#32;&#100;&#111;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#109;
 ## Product Type
 product.type.name=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#99;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;
+product.type.parent=&#67;&#108;&#97;&#115;&#115;&#101;&#32;&#100;&#101;&#32;&#80;&#97;&#105;&#115;
+product.type.sort=&#67;&#108;&#97;&#115;&#115;&#105;&#102;&#105;&#99;&#97;&#114;
 ## Product Prop
 product.prop.name=&#78;&#111;&#109;&#101;&#32;&#100;&#97;&#32;&#112;&#114;&#111;&#112;&#114;&#105;&#101;&#100;&#97;&#100;&#101;
 product.prop.type=&#79;&#115;&#32;&#116;&#105;&#112;&#111;&#115;
