【新增】店长点单商品到精准店或者区域. 【新增】Excel处理工具类.

--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,12 @@
             <artifactId>solr-solrj</artifactId>
             <version>${solrj.version}</version>
         </dependency>
+        <!-- Excel -->
+        <dependency>
+		    <groupId>org.apache.poi</groupId>
+		    <artifactId>poi-ooxml</artifactId>
+		    <version>3.17</version>
+		</dependency>
     </dependencies>
 
     <build>
