【新增】添加商品点单功能.

--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -45,6 +45,7 @@ mu.sys.role=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#102;&#117
 mu.sys.right=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
 mu.st=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;
 mu.st.info=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#110;&#115
+mu.st.out=ÉÌÆ·³ö¿â
 mu.pt=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.info=&#73;&#110;&#102;&#111;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#115;&#111;&#98;&#114;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.type=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
