【新增】定时移除购物车.

--- a/src/main/resources/resource/quartz.properties
+++ b/src/main/resources/resource/quartz.properties
@@ -1,4 +1,4 @@
 quartz.driver=com.mysql.jdbc.Driver
-quartz.url=jdbc:mysql:///db_quartz?characterEncoding=utf-8
+quartz.url=jdbc:mysql://192.168.1.151:3306/db_quartz?characterEncoding=utf-8
 quartz.username=root
 quartz.password=root
