【新增】新增店员季报.

--- a/src/main/resources/resource/global.properties
+++ b/src/main/resources/resource/global.properties
@@ -1,6 +1,6 @@
 #GLOBAL VAR (BETTER IN SYS-DICTIONARY)
 #0.05 = 3 minutes
-SYSTEM_TIME_LIMIT_HOURS=0.02
+SYSTEM_TIME_LIMIT_HOURS=24
 SYSTEM_CONFIRM_SHIP_DAYS=0.02
 
 #FTPœ‡πÿ≈‰÷√
