【新增】新增店员季报.

--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -45,16 +45,33 @@ mu.sys.role=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#102;&#117
 mu.sys.right=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#32;&#97;&#117;&#116;&#111;&#114;&#105;&#100;&#97;&#100;&#101;
 mu.st=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#120;&#105;&#115;&#116;&#234;&#110;&#99;&#105;&#97;&#115;
 mu.st.info=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#110;&#115
-mu.st.out=ÉÌÆ·³ö¿â
+mu.st.out=&#83;&#97;&#237;&#100;&#97;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.info=&#73;&#110;&#102;&#111;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#115;&#111;&#98;&#114;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.type=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.prop=&#65;&#116;&#114;&#105;&#98;&#117;&#116;&#111;&#115;&#32;&#100;&#97;&#115;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
 mu.pt.ppv=&#86;&#97;&#108;&#111;&#114;&#32;&#100;&#97;&#32;&#111;&#112;&#231;&#227;&#111;&#32;&#100;&#97;&#32;&#112;&#114;&#111;&#112;&#114;&#105;&#101;&#100;&#97;&#100;&#101;
+mu.order=&#71;&#101;&#115;&#116;&#227;&#111;&#32;&#100;&#101;&#32;&#101;&#110;&#99;&#111;&#109;&#101;&#110;&#100;&#97;&#115;
+mu.order.pt=&#79;&#114;&#100;&#101;&#110;&#115;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+mu.daily=&#68;&#101;&#99;&#108;&#97;&#114;&#97;&#231;&#227;&#111;&#32;&#101;&#115;&#116;&#97;&#116;&#237;&#115;&#116;&#105;&#99;&#97;
+mu.daily.detail=&#68;&#101;&#116;&#97;&#108;&#104;&#101;&#115;&#32;&#100;&#97;&#115;&#32;&#101;&#110;&#116;&#114;&#97;&#100;&#97;&#115;&#32;&#101;&#32;&#115;&#97;&#237;&#100;&#97;&#115;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&#100;&#111;&#115;&#32;&#100;&#105;&#225;&#114;&#105;&#97;&#115;
+mu.expend.item=&#67;&#97;&#116;&#101;&#103;&#111;&#114;&#105;&#97;&#115;&#32;&#100;&#101;&#32;&#100;&#101;&#115;&#112;&#101;&#115;&#97;&#115;
+mu.region.stock.daily=&#21306;&#22495;&#24215;&#38271;&#27599;&#26085;&#36164;&#37329;&#36827;&#20986;&#36134;&#26126;&#32454;
+mu.stock.quarterly=&#38646;&#21806;&#24215;&#21592;&#23395;&#24230;&#25253;&#34920;
+mu.wms.stock.quarterly=&#20179;&#24211;&#24215;&#21592;&#23395;&#24230;&#25253;&#34920;
+mu.region.stock.quarterly=&#21306;&#22495;&#24215;&#38271;&#23395;&#24230;&#25253;&#34920;
+mu.order.verify=&#86;&#101;&#114;&#105;&#102;&#105;&#99;&#97;&#231;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#101;&#110;&#99;&#111;&#109;&#101;&#110;&#100;&#97;&#115;
+mu.trade.stock=&#67;&#111;&#109;&#112;&#114;&#97;&#115;&#32;&#99;&#111;&#109;&#101;&#114;&#99;&#105;&#97;&#105;&#115;
 ## Message
 message.delete=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#115;&#117;&#112;&#114;&#101;&#115;&#115;&#227;&#111;&#10;&#10;
 message.select=&#80;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#44;&#32;&#115;&#101;&#108;&#101;&#99;&#105;&#111;&#110;&#101;&#32;&#112;&#101;&#108;&#111;&#32;&#109;&#101;&#110;&#111;&#115;&#32;&#117;&#109;&#32;&#100;&#97;&#100;&#111;&#10;&#10;
 message.input=&#69;&#115;&#116;&#97;&#32;&#101;&#110;&#116;&#114;&#97;&#100;&#97;&#32;&#233;&#32;&#117;&#109;&#97;&#32;&#101;&#110;&#116;&#114;&#97;&#100;&#97;&#32;&#111;&#98;&#114;&#105;&#103;&#97;&#116;&#243;&#114;&#105;&#97;
+message.remove.cart=&#83;&#101;&#32;&#111;&#115;&#32;&#105;&#116;&#101;&#110;&#115;&#32;&#97;&#115;&#115;&#105;&#110;&#97;&#108;&#97;&#100;&#111;&#115;&#32;&#115;&#227;&#111;&#32;&#114;&#101;&#109;&#111;&#118;&#105;&#100;&#111;&#115;&#32;&#100;&#111;&#32;&#99;&#97;&#114;&#114;&#105;&#110;&#104;&#111;
+message.goods.in.success=&#73;&#109;&#112;&#111;&#114;&#116;&#97;&#231;&#227;&#111;&#32;&#98;&#101;&#109;&#32;&#115;&#117;&#99;&#101;&#100;&#105;&#100;&#97;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+message.goods.in.fail=&#73;&#109;&#112;&#111;&#114;&#116;&#97;&#231;&#227;&#111;&#32;&#102;&#97;&#108;&#104;&#97;&#100;&#97;&#32;&#100;&#101;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;&#115;
+message.select.file=&#83;&#101;&#108;&#101;&#99;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#102;&#105;&#99;&#104;&#101;&#105;&#114;&#111;&#115;
+message.confirm=&#99;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;
+message.cancel=&#99;&#97;&#110;&#99;&#101;&#108;&#97;&#99;&#105;&#243;&#110;
 ## Status
 status.normal=&#78;&#111;&#114;&#109;&#97;&#108;
 status.disable=&#100;&#101;&#115;&#97;&#99;&#116;&#105;&#118;&#97;&#114;&#10;&#10;
@@ -126,3 +143,52 @@ sku.supplier=&#70;&#111;&#114;&#110;&#101;&#99;&#101;&#100;&#111;&#114;
 sku.availableStock=&#73;&#110;&#118;&#101;&#110;&#116;&#225;&#114;&#105;&#111;&#32;&#100;&#105;&#115;&#112;&#111;&#110;&#237;&#118;&#101;&#108;
 sku.frozenStock=&#66;&#108;&#111;&#113;&#117;&#101;&#105;&#111;&#32;&#69;&#77;&#32;&#115;&#116;&#111;&#99;&#107;
 sku.skuMainPic=&#73;&#109;&#97;&#103;&#101;&#109;
+## Stock Out
+st.out.product=&#68;&#101;&#115;&#105;&#103;&#110;&#97;&#231;&#227;&#111;&#32;&#100;&#97;&#32;&#109;&#101;&#114;&#99;&#97;&#100;&#111;&#114;&#105;&#97;
+st.out.property=&#65;&#115;&#32;&#112;&#114;&#111;&#112;&#114;&#105;&#101;&#100;&#97;&#100;&#101;&#115;
+st.out.add.cart=&#65;&#100;&#105;&#99;&#105;&#111;&#110;&#97;&#114;&#32;&#97;&#111;&#32;&#99;&#97;&#114;&#114;&#105;&#110;&#104;&#111;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;&#115;&#10;
+st.out.view.assess=&#86;&#101;&#114;&#32;&#97;&#32;&#97;&#118;&#97;&#108;&#105;&#97;&#231;&#227;&#111;
+st.out.cart=&#67;&#97;&#114;&#114;&#105;&#110;&#104;&#111;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;&#115;
+st.out.image=&#105;&#109;&#97;&#103;&#101;&#110;&#115;
+st.out.amount=&#113;&#117;&#97;&#110;&#116;&#105;&#100;&#97;&#100;&#101;
+st.out.confirm.order=&#65;&#112;&#114;&#101;&#115;&#101;&#110;&#116;&#97;&#231;&#227;&#111;&#32;&#100;&#97;&#32;&#111;&#114;&#100;&#101;&#109;
+st.out.remark=&#111;&#98;&#115;&#101;&#114;&#118;&#97;&#231;&#245;&#101;&#115;
+st.out.volume.total=&#86;&#111;&#108;&#117;&#109;&#101;&#32;&#116;&#111;&#116;&#97;&#108;
+st.out.total=&#116;&#111;&#116;&#97;&#108;
+## Trade stock
+trade.stock.qgtime=&#72;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;&#44;&#32;&#112;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#46;
+trade.stock.uplaodqgtime=&#72;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#101;&#110;&#118;&#105;&#111;&#32;&#100;&#97;&#32;&#111;&#114;&#100;&#101;&#109;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;
+trade.stock.gwqgtime=&#72;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;&#32;&#110;&#111;&#32;&#101;&#115;&#116;&#114;&#97;&#110;&#103;&#101;&#105;&#114;&#111;
+trade.stock.gwcgfh=&#68;&#101;&#99;&#108;&#97;&#114;&#97;&#231;&#227;&#111;&#32;&#100;&#101;&#32;&#99;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#100;&#97;&#115;&#32;&#97;&#113;&#117;&#105;&#115;&#105;&#231;&#245;&#101;&#115;&#32;&#105;&#110;&#116;&#101;&#114;&#110;&#97;&#115;
+trade.stock.qrtime=&#72;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#99;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;
+trade.stock.qrcgtime=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#114;&#32;&#97;&#32;&#104;&#111;&#114;&#97;&#32;&#100;&#101;&#32;&#112;&#101;&#100;&#105;&#100;&#111;
+trade.stock.qrdh=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#231;&#227;&#111;&#32;&#100;&#97;&#32;&#99;&#104;&#101;&#103;&#97;&#100;&#97;&#46;
+trade.stock.qg=&#80;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#44;&#32;&#99;&#111;&#109;&#112;&#114;&#97;&#114;
+trade.stock.cg=&#99;&#111;&#109;&#112;&#114;&#97;
+trade.stock.finished=&#116;&#101;&#114;&#109;&#105;&#110;&#97;&#114;
+trade.stock.waitsh=&#65;&#32;&#97;&#117;&#100;&#105;&#116;&#97;&#114;&#10;
+trade.stock.send=&#65;&#32;&#101;&#110;&#118;&#105;&#97;&#114;
+trade.stock.recive=&#67;&#104;&#101;&#103;&#111;&#117;&#10;
+trade.stock.cgorder=&#79;&#114;&#100;&#101;&#110;&#115;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;
+trade.stock.qgorder=&#79;&#114;&#100;&#101;&#109;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;&#44;&#32;&#112;&#111;&#114;&#32;&#102;&#97;&#118;&#111;&#114;&#46;
+trade.stock.wmqgorder=&#79;&#114;&#100;&#101;&#109;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;&#32;&#112;&#97;&#114;&#97;&#32;&#99;&#111;&#109;&#233;&#114;&#99;&#105;&#111;&#32;&#101;&#120;&#116;&#101;&#114;&#105;&#111;&#114;
+trade.stock.wmcgorder=&#76;&#105;&#115;&#116;&#97;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;&#115;&#32;&#100;&#111;&#32;&#99;&#111;&#109;&#233;&#114;&#99;&#105;&#111;&#32;&#101;&#120;&#116;&#101;&#114;&#110;&#111;
+trade.stock.upload.cgorder=&#69;&#110;&#118;&#105;&#111;&#32;&#100;&#101;&#32;&#117;&#109;&#97;&#32;&#111;&#114;&#100;&#101;&#109;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;
+trade.stock.type=&#79;&#115;&#32;&#116;&#105;&#112;&#111;&#115;
+trade.stock.type1=&#67;&#111;&#109;&#233;&#114;&#99;&#105;&#111;&#32;&#101;&#120;&#116;&#101;&#114;&#110;&#111;&#47;&#103;&#114;&#97;&#110;&#100;&#101;&#115;&#32;&#97;&#114;&#109;&#97;&#122;&#233;&#110;&#115;
+trade.stock.type2=&#112;&#101;&#231;&#97;&#115;
+trade.stpck.uplaod.upload.cgorder=&#69;&#110;&#118;&#105;&#111;&#32;&#100;&#101;&#32;&#117;&#109;&#97;&#32;&#111;&#114;&#100;&#101;&#109;&#32;&#100;&#101;&#32;&#99;&#111;&#109;&#112;&#114;&#97;
+## Order
+order.sn=&#78;&#250;&#109;&#101;&#114;&#111;&#32;&#100;&#101;&#32;&#111;&#114;&#100;&#101;&#109;
+order.store=&#80;&#111;&#110;&#116;&#111;&#115;&#32;&#100;&#101;&#32;&#118;&#101;&#110;&#100;&#97;&#32;&#97;&#32;&#114;&#101;&#116;&#97;&#108;&#104;&#111;
+order.state=&#69;&#115;&#116;&#97;&#100;&#111;&#32;&#100;&#97;&#32;&#101;&#110;&#99;&#111;&#109;&#101;&#110;&#100;&#97;
+order.price.total=&#84;&#111;&#116;&#97;&#108;&#32;&#100;&#111;&#115;&#32;&#109;&#111;&#110;&#116;&#97;&#110;&#116;&#101;&#115;
+order.submit.time=&#72;&#111;&#114;&#97;&#32;&#100;&#97;&#32;&#101;&#110;&#99;&#111;&#109;&#101;&#110;&#100;&#97;
+order.detail=&#84;&#104;&#101;&#32;&#100;&#101;&#116;&#97;&#105;&#108;
+order.send=&#84;&#104;&#101;&#32;&#100;&#101;&#108;&#105;&#118;&#101;&#114;&#121;
+order.print=&#105;&#109;&#112;&#114;&#105;&#109;&#105;&#114;
+order.state.dsp=&#80;&#101;&#110;&#100;&#105;&#101;&#110;&#116;&#101;&#32;&#100;&#101;&#32;&#97;&#112;&#114;&#111;&#98;&#97;&#99;&#105;&#243;&#110;
+order.state.dfh=&#80;&#114;&#111;&#100;&#117;&#99;&#116;&#111;&#115;&#32;&#112;&#101;&#110;&#100;&#105;&#101;&#110;&#116;&#101;&#115;&#32;&#100;&#101;&#32;&#101;&#110;&#118;&#237;&#111;
+order.state.dsh=&#77;&#101;&#114;&#99;&#97;&#110;&#99;&#237;&#97;&#115;&#32;&#97;&#32;&#114;&#101;&#99;&#105;&#98;&#105;&#114;
+order.state.ddwc=&#79;&#114;&#100;&#101;&#110;&#32;&#99;&#117;&#109;&#112;&#108;&#105;&#100;&#97;
+order.state.ddgb=&#67;&#105;&#101;&#114;&#114;&#101;&#32;&#100;&#101;&#32;&#112;&#101;&#100;&#105;&#100;&#111;&#115;
