【新增】新增店员季报.

--- a/src/main/resources/messages/message_pt_PRT.properties
+++ b/src/main/resources/messages/message_pt_PRT.properties
@@ -96,6 +96,7 @@ user.name=&#78;&#111;&#109;&#101;&#32;&#100;&#111;&#32;&#117;&#116;&#105;&#108;&
 user.email=&#69;&#110;&#100;&#101;&#114;&#101;&#231;&#111;&#32;&#100;&#101;&#32;&#99;&#111;&#114;&#114;&#101;&#105;&#111;&#32;&#101;&#108;&#101;&#99;&#116;&#114;&#243;&#110;&#105;&#99;&#111;
 user.phone=&#78;&#250;&#109;&#101;&#114;&#111;&#32;&#100;&#101;&#32;&#116;&#101;&#108;&#101;&#109;&#243;&#118;&#101;&#108;
 user.roles=&#76;&#105;&#115;&#116;&#97;&#32;&#100;&#101;&#32;&#102;&#117;&#110;&#231;&#245;&#101;&#115;&#10;
+user.btn.mpass=&#67;&#97;&#109;&#98;&#105;&#97;&#114;&#32;&#108;&#97;&#32;&#99;&#111;&#110;&#116;&#114;&#97;&#115;&#101;&#241;&#97;
 ## Stock
 stock.name=&#78;&#111;&#109;&#101;&#32;&#100;&#111;&#32;&#101;&#110;&#116;&#114;&#101;&#112;&#111;&#115;&#116;&#111;
 stock.parent=&#68;&#101;&#112;&#243;&#115;&#105;&#116;&#111;&#32;&#68;&#79;&#83;&#32;&#80;&#97;&#105;&#115;
@@ -130,6 +131,7 @@ product.viewProperties=&#21830;&#21697;&#26174;&#31034;&#23646;&#24615;
 product.properties=&#67;&#111;&#110;&#106;&#117;&#110;&#116;&#111;&#32;&#100;&#101;&#32;&#65;&#116;&#114;&#105;&#98;&#117;&#116;&#111;&#115;&#32;&#67;&#111;&#109;&#109;&#111;&#100;&#105;&#116;&#121;
 product.resources=&#73;&#109;&#97;&#103;&#101;&#109;
 product.remark=&#79;&#98;&#115;&#101;&#114;&#118;&#97;&#231;&#245;&#101;&#115;
+product.btn.import=&#73;&#109;&#112;&#111;&#114;&#116;&#97;&#99;&#105;&#243;&#110;&#32;&#97;&#32;&#103;&#114;&#97;&#110;&#101;&#108;
 ## SKU
 sku.add=&#65;&#100;&#105;&#99;&#105;&#111;&#110;&#97;&#114;&#32;&#83;&#75;&#85;
 sku.skuId=&#36135;&#21697;&#32534;&#30721;
@@ -192,3 +194,20 @@ order.state.dfh=&#80;&#114;&#111;&#100;&#117;&#99;&#116;&#111;&#115;&#32;&#112;&
 order.state.dsh=&#77;&#101;&#114;&#99;&#97;&#110;&#99;&#237;&#97;&#115;&#32;&#97;&#32;&#114;&#101;&#99;&#105;&#98;&#105;&#114;
 order.state.ddwc=&#79;&#114;&#100;&#101;&#110;&#32;&#99;&#117;&#109;&#112;&#108;&#105;&#100;&#97;
 order.state.ddgb=&#67;&#105;&#101;&#114;&#114;&#101;&#32;&#100;&#101;&#32;&#112;&#101;&#100;&#105;&#100;&#111;&#115;
+order.confirm.time=&#84;&#105;&#101;&#109;&#112;&#111;&#32;&#100;&#101;&#32;&#101;&#106;&#101;&#99;&#117;&#99;&#105;&#243;&#110;&#32;&#100;&#101;&#108;&#32;&#112;&#101;&#100;&#105;&#100;&#111;
+order.comment.time=&#84;&#105;&#101;&#109;&#112;&#111;&#32;&#100;&#101;&#32;&#101;&#106;&#101;&#99;&#117;&#99;&#105;&#243;&#110;&#32;&#100;&#101;&#108;&#32;&#112;&#101;&#100;&#105;&#100;&#111;
+order.btn.recive=&#67;&#111;&#110;&#102;&#105;&#114;&#109;&#97;&#99;&#105;&#243;&#110;&#32;&#100;&#101;&#32;&#108;&#97;&#32;&#114;&#101;&#99;&#101;&#112;&#99;&#105;&#243;&#110;
+order.btn.commit=&#76;&#97;&#32;&#101;&#118;&#97;&#108;&#117;&#97;&#99;&#105;&#243;&#110;
+## Order Detail
+order.detail.list=&#68;&#101;&#116;&#97;&#108;&#108;&#101;&#115;&#32;&#100;&#101;&#108;&#32;&#112;&#101;&#100;&#105;&#100;&#111;
+order.detail.image=&#105;&#109;&#225;&#103;&#101;&#110;&#101;&#115;
+order.detail.ptname=&#78;&#111;&#109;&#98;&#114;&#101;&#32;&#100;&#101;&#32;&#108;&#97;&#32;&#109;&#101;&#114;&#99;&#97;&#110;&#99;&#237;&#97;
+order.detail.property=&#112;&#114;&#111;&#112;&#105;&#101;&#100;&#97;&#100;&#101;&#115;
+order.detail.amount=&#69;&#108;&#32;&#110;&#250;&#109;&#101;&#114;&#111;&#32;&#100;&#101;
+order.detail.volume.total=&#86;&#111;&#108;&#117;&#109;&#101;&#110;&#32;&#116;&#111;&#116;&#97;&#108;
+## commit
+commit.waitcommit=&#101;&#118;&#97;&#108;&#117;&#97;&#100;&#111;
+commit.finishcommit=&#69;&#118;&#97;&#108;&#117;&#97;&#99;&#105;&#243;&#110;&#32;&#100;&#101;&#32;&#112;&#101;&#100;&#105;&#100;&#111;&#115;
+commit.entity.score=&#76;&#97;&#32;&#112;&#117;&#110;&#116;&#117;&#97;&#99;&#105;&#243;&#110;
+commit.entity.commit=&#99;&#111;&#109;&#101;&#110;&#116;&#97;&#114;&#105;&#111;&#115;
+commit.dialog.name=&#69;&#118;&#97;&#108;&#117;&#97;&#99;&#105;&#243;&#110;&#32;&#100;&#101;&#32;&#112;&#101;&#100;&#105;&#100;&#111;&#115;
